--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "node-api-base",
   "version": "1.0.0",
   "scripts": {
-    "dev": "ts-node src/server.ts"
+    "dev": "tsx watch src/server.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
@@ -14,7 +15,9 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.27",
+    "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.16.2",
     "typescript": "^5.4.2"
   }
 }
